--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,8 @@ margin-bottom:5px;
 text-align:right;
 font-size:15px;
 }
+#mainPageGen{
+    background-color:#cccccc;
+    border-top:2px solid black;
+    height:100%;
+}
