--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,23 @@ margin-bottom:5px;
 text-align:right;
 font-size:15px;
 }
+
 #mainPageGen{
     background-color:#cccccc;
     border-top:2px solid black;
     height:100%;
+}
+#leftPageGen{
+    background-color:#599fcf;
+    border:1px solid black;
+    height:100%;
+    width:100px;
+    float:left;
+}
+#rightPageGen{
+    background-color:#c0402a;
+    border:1px solid black;
+    height:100%;
+    width:100px;
+    float:right;
 }
